--- a/content.Rmd
+++ b/content.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "Untitled"
-author: "pravesh"
-date: "15/09/2021"
-output: html_document
+title: "Lecture Materials"
+output: 
+  html_document:
+    logo: logo.png
 ---
 
 [1. The Colonial Legacy](content/1.TheColonialLegacy.html){target="_blank"} <br>
-[2. Growht and Distributional Regimes](content/2.GrowthAndDistributionRegimes.html){target="_blank"}
+[2. Growth and Distributional Regimes](content/2.GrowthAndDistributionRegimes.html){target="_blank"} <br>
+[3. Growt Record of Indian Economy](3.Gr)
