--- a/content.Rmd
+++ b/content.Rmd
@@ -13,3 +13,4 @@ output:
 ### [2. Growth and Distributional Regimes](content/2.GrowthAndDistributionRegimes.html){target="_blank"} <br>
 ### [3. Growth Record of Indian Economy](content/3.growth-record-of-indian-economy.html){target="_blank"}
 ### [4. Five Year Plans in India](content/4.PlanningInIndia.html){target="_blank"}
+### [5. Demographic Transition](content/5.DemographicTransition.html){target="_blank"}
