--- a/content.Rmd
+++ b/content.Rmd
@@ -14,3 +14,4 @@ output:
 ### [3. Growth Record of Indian Economy](content/3.growth-record-of-indian-economy.html){target="_blank"}
 ### [4. Five Year Plans in India](content/4.PlanningInIndia.html){target="_blank"}
 ### [5. Demographic Transition](content/5.DemographicTransition.html){target="_blank"}
+### [6. Education](content/6.Education.html){target="_blank}
