--- a/content/4.PlanningInIndia.Rmd
+++ b/content/4.PlanningInIndia.Rmd
@@ -60,6 +60,7 @@ output:
 
 ## 3rd FYP (1961-66)
 - Target: 5.6% Achieved: 2.8%
+- Belief that the economy had entered the "take-off stage".
 - Aim: Self reliant and self generating
 - Importance to agriculture
 - A complete failure
