--- a/content/4.PlanningInIndia.Rmd
+++ b/content/4.PlanningInIndia.Rmd
@@ -248,6 +248,82 @@ Indian economic planning has – and probably deserves – the reputation of bei
 they argued that development was blocked by inflated public sectors, distorting economic controls and overemphasis on capital formation. Governments were part of the problem, not part of the solution; they were inefficient and often corrupt and hence parasitic, not stimulators of growth. The solution was to privatize the public sector, reduce the scale and scope of government spending and give up all policies, from exchange rate controls to subsidies and redistributive taxation, that altered any prices that would otherwise be set by the impersonal forces of the market. (Leys 1998: 18)
 </blockquote>
 
+
+---
+
+- Bhagwati and Desai in 1970, in their book *Planning for Industrialization*, argue that, at least since the beginning of the second plan period in 1956, Indian planning ***‘fell into the trap of excessively detailed, physical targets oriented planning’***, although India already had sufficient economic and administrative infrastructure to make a much more efficient planning possible. 
+- Jagdish Bhagwati pursues the same type of argument in his 1974 book with T. N. Srinivasan.
+<blockquote>
+India’s foreign trade regime, in conjunction with domestic licensing policies in the industrial sector, led to economic inefficiencies and impaired her economic performance.… The policy framework was detrimental, on balance, to the growth of the economy by adversely influencing export performance, by wasteful interindustrial and inter-firm allocation of resources, by permitting and encouraging  expansion of excess capacity and by blunting competition and hence  the incentives  for cost-consciousness and quality-improvement. The effects on  savings and  research and development expenditures were, at best, ambiguous and  cannot  plausibly be cited as having offset these inefficiencies. (Bhagwati and  Srinivasan  1974: 245)
+</blockquote>
+
+
+---
+
+- In the 1970s, criticisms grew as well concerning the place given to agriculture (Frankel 1978). 
+- Mellor (1976) and Lipton (1977) proposed a new path of growth led by agriculture and based on the improvement of agriculture on the mass of small farms.
+- Beyond being in favour of, against, or disappointed by planning, the way to look at planning changed in the mid-1960s.
+- Economists in the 1950s wrote on planning from a technical economic point of view. 
+- Ten years later, political scientists and economists argued that to understand how planning works it is necessary to consider political, social, institutional, and economic forces.
+- In consequence, they adopted wider views asking **‘Who plays a role, who sets the goals?’** 
+
+---
+
+**1980s: Questioning the State and Planning**
+
+- The 1980s saw a **‘shift from planning the economy to management of the economy’** (Kurien 1996: 10) to **‘freeing the economy’** as the subtitle of Jagdish Bhagwati’s book *India in Transition (1993)* indicates.
+- During the 1980s, economists continued to assess how successful planning had been in furthering the development of the country (Gupta [1989] ,Sukhamoy Chakravarty [1987]).
+- Byres (a Marxist economist) considers that the literature
+<blockquote>
+‘presented a virulent critique of planning, which was represented as simply the institutionalised means whereby the state pursued its predation, extended and reproduced its massive inefficiencies, and gave rise to growing and deeply entrenched rent seeking’ (Byres 1997a: 1)
+</blockquote>
+
+
+---
+
+- Political scientists and political activists also examined whether the Indian state's policies, actions, and structures perpetuated or challenged class-based inequalities. 
+- Their work contributes to broader discussions about social justice, governance, and the distribution of power and resources within the country. 
+- The discussion among economists on the role played by the Indian state in fostering development has focused on the sluggish growth rate of the economy since the mid-1960s. 
+- Political scientists accepted these viewpoints and combined them with considerations on the nature and distribution of power and influence in the Indian society. 
+
+---
+
+**1990s: Questioning the Institution, Its Adaptability**
+
+- The 1990s saw two main types of studies on planning and the PC: 
+  - One considers how planning and the PC have changed/adapted following the liberalization of the Indian economy; 
+  - another follows the theme of ‘planning and the state’, looking either at planning and the bureaucratic state or at planning and nationalism. 
+
+**Liberalization**
+
+- A large amount of literature ‘sympathetic to the reforms’.
+- Also some critical treatment of the reforms (Rudra 1992; Byres 1997b; see Byres 1997a).
+- However, the vast majority of these works was not on the PC and not really on planning; they were on liberalization (and only indirectly on its impacts on planning). 
+- Nevertheless, some research considered directly how planning and the PC have changed or adapted following the liberalization of the Indian economy, what were their remaining role and how they should transform themselves .
+
+---
+
+
+- Studies set out to evaluate anew the achievements and limitations of Indian planning between 1950 and the late 1980s.
+- For instance: **‘who has benefitted from planning?’** 
+- The answer was that planning ‘was meant to’ and benefited mostly rich farmers through its agricultural policy and industrial capitalists through its industrialization policy (even if he is more uncertain about the second group, see 1998: 111). He concludes that ‘the major indictment of planning in India is that it failed to benefit the poor’ (Chaudhuri 1998: 111)
+
+**Planning and State**
+
+- In the 1990s, scholars pursued the analysis of the link between planning and the (bureaucratic) state (Bardhan 1998; Chatterjee 1997; Byres 1997a; Kaviraj 1995; Nayar 1997).
+- This literature developed in the 1990s but it is looking back.
+- Its focus was on the 15 years after independence when the PC was a strong institution. 
+- It examined the role of planning in conjunction with the type of state built after independence and emphasized that planning appeared as a necessity after the promises made during the independence struggle.
+
+---
+
+- [Partha Chatterjee](https://anthropology.columbia.edu/content/partha-chatterjee) in his oft-quoted article addressing the political role of planning in India considers that
+<blockquote>
+the debate on the need for industrialisation … was politically resolved by successfully constituting planning as a domain outside the ‘squabbles and conflicts of politics’. As early as the 1940s, planning had emerged as a crucial institutional modality by which the state would determine the material allocation of productive resources within the nation: a modality of political power constituted outside the immediate political process itself. (Chatterjee 1997: 275–276)
+</blockquote>
+
+- 
+
 # The Planning Experience in India
 
 ## Reference
