--- a/content.Rmd
+++ b/content.Rmd
@@ -8,7 +8,7 @@ output:
 
 ---
 
-### [Student list 2023](https://coe.presiuniv.ac.in/coepresi/cbcsodd2023/fetchdata.php?deptVal=&semVal=&orderby=student_name&geVal=ECON03GE3A){target="_blank"}
+### [GE Student list 2023](https://coe.presiuniv.ac.in/coepresi/cbcsodd2023/fetchdata.php?deptVal=&semVal=&orderby=student_name&geVal=ECON03GE3A){target="_blank"}
 
 ### [1. The Colonial Legacy](content/1.TheColonialLegacy.html){target="_blank"} 
 ### [2. Growth and Distributional Regimes](content/2.GrowthAndDistributionRegimes.html){target="_blank"} <br>
